--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airbclub",
+  "name": "creative-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/vue-fontawesome": "0.0.22",
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.0",
+    "popper.js": "^1.14.3",
+    "vue": "^2.5.13",
+    "vue-carousel": "^0.6.14",
+    "vue-moment": "^3.2.0",
+    "vue-resource": "^1.5.0",
+    "vue2-animate": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
     "@vue/cli-service": "^3.0.0-beta.6",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
